--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "WeatherApp",
     "slug": "WeatherApp",
+    "description": "This is a Weather App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
